# CheckersRL

./: .gitignore  CMakeLists.txt  ai.cpp  ai.hpp  board.cpp  board.hpp  game.cpp  game.hpp  mTree.hpp  main.cpp  piece.cpp  piece.hpp  player.cpp  player.hpp  pmove.cpp  pmove.hpp  tests.cpp  tree.hpp  treeSearch.hpp
